--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# MAS Results
+/multi-agent-simulation/outputs/*
+!/multi-agent-simulation/outputs/animations/.gitkeep
+!/multi-agent-simulation/outputs/images/.gitkeep
+!/multi-agent-simulation/outputs/logs/.gitkeep
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
