ディレクトリ構成を変更

--- a/multi-agent-simulation/v1/.gitignore
+++ b/multi-agent-simulation/v1/.gitignore
@@ -1,6 +1,1 @@
-/outputs/animations/*
-/outputs/images/*
-/outputs/logs/*
-!/outputs/animations/.gitkeep
-!/outputs/images/.gitkeep
-!/outputs/logs/.gitkeep
+/outputs/*
